CleaningPlaceモデルのCRUD作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,8 +15,11 @@ $secondary-color: color("teal", "lighten-2") !default;
   text-align: center;
 }
 .alert{
-  color:#FF3333;
+  color:#ef5350;
 }
 .notice{
-  color:#33CC99;
+  color:#4db6ac;
+}
+.nav-wrapper{
+  background-color: #4db6ac;
 }
