--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -66,3 +66,5 @@
                 =f.text_field :name
               %td
                 = f.submit '追加', class: "waves-effect waves-light btn"
+      .send_to_mattermost
+        = link_to '決定する (Mattermostに送信されます）',send_to_matermost_cleaning_places_path, { class: "waves-effect waves-light btn-large" }
